--- a/project1/package.json
+++ b/project1/package.json
@@ -11,6 +11,7 @@
     "express": "^4.18.2",
     "node-modules": "^1.0.1",
     "nodemon": "^2.0.20",
+    "project1": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
