--- a/project1/package.json
+++ b/project1/package.json
@@ -9,14 +9,14 @@
     "axios": "^1.2.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "node-modules": "^1.0.1",
+    "node-modules": "^0.0.1",
     "nodemon": "^2.0.20",
     "project1": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-export-table-to-excel": "^1.0.6",
     "react-router-dom": "^6.6.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
